unpackaged/main/default/objects/hed__Test__c/fields/hed__Test_Type__c.field-meta.xml
<CustomField>
    <fullName>hed__Test_Type__c</fullName>
    <description>The formal name for the test taken.</description>
    <inlineHelpText>The formal name for the test taken.</inlineHelpText>
    <label>Test Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SAT</fullName>
            </value>
            <value>
                <fullName>ACT</fullName>
            </value>
            <value>
                <fullName>GRE</fullName>
            </value>
            <value>
                <fullName>GMAT</fullName>
            </value>
            <value>
                <fullName>TOEFL</fullName>
            </value>
            <value>
                <fullName>ACCUNEXTGEN</fullName>
            </value>
            <value>
                <fullName>AP</fullName>
            </value>
            <value>
                <fullName>CLEP</fullName>
            </value>
            <value>
                <fullName>PERT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>