unpackaged/main/default/objects/hed__Test__c/fields/traa_Lead__c.field-meta.xml
<CustomField>
    <fullName>traa_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If a contact and opportunity originated from a lead, this field is used to indicate the lead record that the test record originated from.</description>
    <inlineHelpText>If a contact and opportunity originated from a lead, this field is used to indicate the lead record that the test record originated from.</inlineHelpText>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Tests</relationshipLabel>
    <relationshipName>traa_Tests</relationshipName>
    <type>Lookup</type>
</CustomField>