unpackaged/main/default/objects/hed__Test__c/validationRules/traa_ValidateContactOrLeadRule.validationRule-meta.xml
<ValidationRule>
    <fullName>traa_ValidateContactOrLeadRule</fullName>
    <active>true</active>
    <description>Either Contact or Lead should be populated on Test Record</description>
    <errorConditionFormula>AND( ISBLANK( hed__Contact__c ) ,  ISBLANK( traa_Lead__c ))</errorConditionFormula>
    <errorMessage>Either Contact or Lead should be populated.</errorMessage>
</ValidationRule>